--- a/style.css
+++ b/style.css
@@ -169,10 +169,12 @@ main .weather-header .search-locations {
 main .weather-header .search-locations li {
   text-overflow: ellipsis;
   padding: 11px 16px;
+}
+main .weather-header .search-locations li:not(.noResult) {
   border-bottom: 1px solid #000;
   cursor: pointer;
 }
-main .weather-header .search-locations li:hover {
+main .weather-header .search-locations li:not(.noResult):hover {
   background-color: #000;
   color: #fff;
 }
