--- a/style.scss
+++ b/style.scss
@@ -215,13 +215,16 @@ main {
         text-overflow: ellipsis;
 
         padding: 11px 16px;
-        border-bottom: 1px solid #000;
 
-        cursor: pointer;
+        &:not(.noResult) {
+          border-bottom: 1px solid #000;
 
-        &:hover {
-          background-color: #000;
-          color: #fff;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #000;
+            color: #fff;
+          }
         }
       }
     }
